--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.60.6",
     "axios": "^1.5.1",
     "dayjs": "^1.11.6",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.16.4",
     "graphql": "^16.6.0",
     "jsoncrush": "^1.1.8",
